--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-    <section class="hero-section" role="main" aria-labelledby="hero-title">
+    <section class="hero-section" aria-labelledby="hero-title">
         <div class="left-content">
             <h1 id="hero-title">Bem-vindo à<br>CA Auto Serviços</h1>
             <p>Oferecemos serviços completos de mecânica em geral com qualidade e confiança.</p>
@@ -57,8 +57,6 @@
     <div class="letreiro-container">
         <div id="meu-letreiro" class="letreiro-texto">Bem-vindo à CA Auto Serviços! Serviços de mecânica com qualidade e confiança.</div>
     </div>
-
-    </section>
 
     <section id="service" class="services-section" role="region" aria-labelledby="services-title">
         <div class="container">
@@ -101,7 +99,7 @@
             </div>
             <div class="social-media">
                 <a href="https://www.instagram.com/caautoservicos/#" target="_blank" rel="noopener" class="instagram-link">
-                    <img src="/icons/instagram.png" alt="Instagram" class="instagram-icon">
+                    <img src="icons/instagram.png" alt="Instagram" class="instagram-icon">
                     Siga-nos no Instagram: @caautoservicos
                 </a>
             </div>
